Fixed CSS Issues due to Library upgrades and other issues on Network Monitoring pages
- Style changes for tooltip name which used to appear truncated
- Style changes to give spacing between infoboxes for Infra Node Details Pages
- Removed setting of hashparams['reload'] as this was leading to stop redirect of Instance from Instance list page

Closes-Bug: #1617989, Closes-Bug: #1633612.

--- a/webroot/common/ui/css/contrail.theme.elements.css
+++ b/webroot/common/ui/css/contrail.theme.elements.css
@@ -3395,7 +3395,6 @@ td.td-actions a.td-action {
 }
 .infobox-details {
 	height: auto;
-	margin: 0px;
 }
 
 .infobox-dynamic {
